fix on issues with video overlay on analytics page - added transparent bg to video-overlay, made video to autplay on open, change in color for close button under video-overlay, changed z-index value to header.top class

--- a/source/assets/stylesheets/components/_video-component.scss
+++ b/source/assets/stylesheets/components/_video-component.scss
@@ -24,14 +24,19 @@
 
 .player-close {
   font-size: 30px;
-  color: #fff;
+  color: #e74c3c;
   position: absolute;
-  right: -5px;
-  top: -35px; 
+  right: 3%;
+  top: 25%; 
   cursor: pointer;
   border: none;
   outline: none;
   background: none;
+
+  @media (min-width: $screen-lg) {
+    right: 15%;
+    top: 15%;  
+  }
 }
 
 .play-button {
@@ -48,27 +53,34 @@
 }
 
 .overlay-video-container {
-  width: 80%;
-  height: 500px;
-  background: #fff;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
   position: fixed;
   z-index: 99;
   top: 0;
-  left: 10%;
-  transform: translate(0, -200%);
+  left: 0;
   transition: all 0.5s;
+  visibility: hidden;
 }
 
 .video-iframe {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 315px;
   display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  @media (min-width: $screen-lg){
+    width: 70%;
+    height: 490px;
+  }
 }
 
 .show-overlay {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  visibility: visible;
 }
 
 .video-content_header {
